@@ -1,6 +1,6 @@
 {
   "name": "mkdocs-material",
-  "version": "2.7.2",
+  "version": "2.7.3",
   "description": "A Material Design theme for MkDocs",
   "keywords": [
     "mkdocs",
